# OGRGeometry

./: .gitignore  CMakeLists.txt  Destructor.cpp  Destructor.h  OGRCurve.cpp  OGRCurve.h  OGRCurvePolygon.cpp  OGRCurvePolygon.h  OGRGeometry.cpp  OGRGeometry.h  OGRGeometryCollection.cpp  OGRGeometryCollection.h  OGRLineString.cpp  OGRLineString.h  OGRLinearRing.cpp  OGRLinearRing.h  OGRMultiCurve.cpp  OGRMultiCurve.h  OGRMultiLineString.cpp  OGRMultiLineString.h  OGRMultiPoint.cpp  OGRMultiPoint.h  OGRMultiPolygon.cpp  OGRMultiPolygon.h  OGRMultiSurface.cpp  OGRMultiSurface.h  OGRPoint.cpp  OGRPoint.h  OGRPolygon.cpp  OGRPolygon.h  OGRSimpleCurve.cpp  OGRSimpleCurve.h  OGRSurface.cpp  OGRSurface.h  README.md  input.txt  main.cpp  util_variable.cpp  util_variable.h
